# App-EGIAmpServer

./: .appveyor.yml  .bintray.json  .gitignore  .travis.yml  CMakeLists.txt  EGIAmpWindow.cpp  EGIAmpWindow.h  EGIAmpWindow.ui  Impedance.md  README.md  ampserver_config.cfg  app.entitlements  appveyor.yml
.github/workflows/: build.yml
cli/: main.cpp
cmake/: embed_resources.cmake  generate_filter_delays.cmake
core/include/egiamp/: AmpServerConfig.h  AmpServerConnection.h  AmpServerProtocol.h  LSLStreamer.h
core/src/: AmpServerConnection.cpp  EGIAmpClient.cpp  LSLStreamer.cpp
gui/: EGIAmpWindow.cpp
mock/: AmpServerAPI.json  CMakeLists.txt  mock_ampserver.py
mock/include/: AmpServerProtocol.h  ByteSwap.h  CommandHandler.h  DataStreamGenerator.h  ECIHandler.h  MockAmplifier.h  NotificationHandler.h
mock/src/: CommandHandler.cpp  DataStreamGenerator.cpp  ECIHandler.cpp  MockAmplifier.cpp  NotificationHandler.cpp  main.cpp
resources/: amplifier_scaling.json  digital_inputs.json  impedance_thresholds.json  sampling_rates.json
scripts/: analyze_physio.py  din_lsl_monitor.py  din_serial_test.py  impedance_viewer.py  raw_timestamp_test.py  requirements.txt  sign_and_notarize.sh  test_amp_command.sh  test_physio_notification.py
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/egiamp/: AmpServerConfig.h  AmpServerConnection.h  AmpServerProtocol.h  EGIAmpClient.h  ElectrodePositions.h  Endian.h  ImpedanceMeasurement.h  LSLStreamer.h  PhysioDelayLine.h  SensorLayout.h
src/core/src/: AmpServerConfig.cpp  AmpServerConnection.cpp  EGIAmpClient.cpp  ElectrodePositions.cpp  ImpedanceMeasurement.cpp  LSLStreamer.cpp  SensorLayout.cpp
src/gui/: CMakeLists.txt  EGIAmpWindow.cpp  EGIAmpWindow.h  EGIAmpWindow.ui  main.cpp
